--- a/lang/en.json
+++ b/lang/en.json
@@ -84,6 +84,8 @@
 
     "MNM3E.Area": "Area",
 
+    "MNM3E.Age": "Age",
+
     "MNM3E.Attack": "Attack",
     "MNM3E.AttackCheck": "Attack Check",
 
@@ -102,6 +104,7 @@
     "MNM3E.Cost": "Cost",
     "MNM3E.CostType": "Cost Type",
     "MNM3E.Custom": "Custom",
+    "MNM3E.CDetails": "Character Details",
 
     "MNM3E.DC": "DC",
 
@@ -165,6 +168,8 @@
     "MNM3E.EquipmentPoints": "Equipment Points",
     "MNM3E.Expressions": "Expressions",
     
+    "MNM3E.Eyes": "Eyes",
+
     "MNM3E.Favorite": "Favorite",
     "MNM3E.FavoriteAdvantages": "Favorite Advantages",
     "MNM3E.FavoriteEquipment": "Favorite Equipment",
@@ -185,6 +190,9 @@
     "MNM3E.ItemName": "Item Name",
     "MNM3E.ItemNewFormat": "New {type}",
     "MNM3E.ItemSummaryBuilder": "Item Summary Builder",
+
+    "MNM3E.Hair": "Hair",
+    "MNM3E.Height": "Height",
 
     "MNM3E.MassPoundsAbbrev": "lbs.",
     "MNM3E.MassTons": "tons",
@@ -210,6 +218,7 @@
     "MNM3E.Notes": "Notes",
 
     "MNM3E.OK": "Ok",
+    "MNM3E.Origins": "Origins",
 
     "MNM3E.OptionEnableDegreeCalculator": "Enable Degree Calculator",
     "MNM3E.OptionEnableDegreeCalculatorHint": "Adds a calculator to the bottom of the chat sidebar.",
@@ -308,5 +317,7 @@
 
     "MNM3E.VolumeCubicFeetAbbrev": "cft.",
     "MNM3E.VolumeMillionCubicFeetAbbrev": "mcft.",
-    "MNM3E.VolumeBillionCubicFeetAbbrev": "bcft."
+    "MNM3E.VolumeBillionCubicFeetAbbrev": "bcft.",
+
+    "MNM3E.Weight": "Weight"
 }
