Bio/Notes/Comp/Origins hold data

--- a/lang/en.json
+++ b/lang/en.json
@@ -178,6 +178,7 @@
     "MNM3E.FormulaBuilder": "Formula Builder",
 
     "MNM3E.GroupAffiliation": "Group Affiliation",
+    "MNM3E.Gender": "Gender",
 
     "MNM3E.Identity": "Identity",
 
