"finished" details page of Vehicles Sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -183,6 +183,7 @@
     "MNM3E.FavoritePowers": "Favorite Powers",
     "MNM3E.Formula": "Formula",
     "MNM3E.FormulaBuilder": "Formula Builder",
+    "MNM3E.Features": "Features",
 
     "MNM3E.GroupAffiliation": "Group Affiliation",
     "MNM3E.Gender": "Gender",
